# diffusion2D

./: README.md  pyproject.toml  test.py
luosg_diffusion2d/: diffusion2d.py  output.py
